# basketball_reference_scraper

./: .gitignore  Makefile  README.md  examples.py  pyproject.toml
.github/workflows/: main.yml
basketball_reference_scraper/: box_scores.py  constants.py  drafts.py  injury_report.py  lookup.py  pbp.py  players.py  request_utils.py  seasons.py  shot_charts.py  teams.py  utils.py
test/: test_box_scores.py  test_drafts.py  test_injury_report.py  test_pbp.py  test_players.py  test_seasons.py  test_shot_charts.py  test_teams.py
