[tool.poetry]
name = "basketball-reference-scraper"
version = "3.0.1"
description = "A Python client for scraping stats and data from Basketball Reference"
authors = [
    "Vishaal Agartha <vishaalagartha@gmail.com>",
    "Aniket Braganza <aabragan@gmail.com>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aabragan/basketball_reference_scraper"
keywords = [
        "nba",
        "wnba",
        "sports",
        "data mining",
        "basketball",
        "basketball reference",
        "basketball-reference.com",
]
packages = [{ include = "basketball_reference_scraper"}]

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
bs4 = "^0.0.2"
lxml = "^5.3.0"
numpy = "^2.1.1"
pandas = "^2.2.2"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.2"
requests = "^2.32.3"
six = "^1.16.0"
soupsieve = "^2.6"
Unidecode = "^1.3.8"
selenium = "^4.24.0"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
